--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ build/
 .env.development.local
 .env.test.local
 .env.production.local
+!api-relay-server/relay.settings
 
 # IDE and editor files
 .idea/
