--- a/api-relay-server/package.json
+++ b/api-relay-server/package.json
@@ -19,7 +19,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
-    "ws": "^8.18.2"
+    "ws": "^8.18.2",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
