feat: Enhanced admin UI with real-time logs and improved settings
- Added real-time server log collection and display system
- Fixed auto-kill toggle functionality with proper server-side handling
- Redesigned settings page layout with modern UI components
- Implemented /admin/logs endpoint for real-time log streaming
- Updated grid layout with logs panel taking 67% of window width
- Added chat bubble icon and improved header design
- Removed revert button and streamlined form actions
- Enhanced toggle switches and form styling
- Added proper error handling and validation for settings

--- a/api-relay-server/relay.settings
+++ b/api-relay-server/relay.settings
@@ -4,7 +4,8 @@ PORT=3003
 # Valid values: "queue" (default) or "drop".
 # "queue": New messages will wait if the extension is busy.
 # "drop": New messages will be rejected if the extension is busy.
-MESSAGE_SEND_STRATEGY=drop
+MESSAGE_SEND_STRATEGY=queue
 # REQUEST_TIMEOUT_MS: The timeout for requests sent to the browser extension, in milliseconds.
 # Default: 300000 (5 minutes)
 REQUEST_TIMEOUT_MS=300000
+AUTO_KILL_PORT=true
